# botex

./: .gitignore  404.html  CHANGELOG.md  LICENSE  README.md  _botex.env  _secrets.env  config.yaml  getting_started.html  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  reference.html  requirements.txt  sitemap.xml  tox.ini  tutorials.html
0.1/: 404.html  index.html  reference.html  sitemap.xml
0.1/search/: search_index.json
0.2/: 404.html  getting_started.html  index.html  reference.html  sitemap.xml
0.2/assets/javascripts/: bundle.88dd0f4e.min.js
0.2/search/: search_index.json
0.2/tutorials/: exp_3llms.html  running_an_experiment.html
assets/css/: overrides.css
assets/javascripts/: bundle.88dd0f4e.min.js
code/: analysis.r  analyze_bot_responses.py  bot.py  bot_prompts.csv  conv_prompts.csv  extract_experimental_data.py  run_otree_session.py
docs/: _quarto.yml  getting_started.md  index.md  presentation.qmd  reference.md  tutorials.md
docs/materials/: beamer_theme_trr266_16x9.sty
docs/tutorials/: exp_3llms.md  running_an_experiment.md
otree/: db.sqlite3.2024-03-21  settings.py
otree/deception/: Choice1.html  Choice2.html  PayoffThanks.html  __init__.py
otree/ftrust/: Results.html  Send.html  SendBack.html  Thanks.html  __init__.py  instructions.html
otree/payment_info/: PaymentInfo.html
otree/trust/: Checks.html  Results.html  Send.html  SendBack.html  __init__.py  instructions.html
search/: search_index.json
src/botex/: __init__.py  bot.py  bot_prompts.csv  botex_db.py  cli.py  completion.py  config.py  db_manager.py  env.py  gguf_parser.py  llamacpp.py  llm_otree_bots_manager.py  local_llm.py  logger.py  message_handler.py  otree.py  otree_session_manager.py  schemas.py  web_interaction_handler.py
tests/: conftest.py  questions.csv  test_a_botex_db.py  test_b_otree.py  test_c_bots.py  test_c_litellm.py  test_c_llamacpp.py  test_c_local_llm.py  test_c_openai.py  test_d_exports.py  test_e_local_llm.py  utils.py
tests/otree/: requirements.txt  settings.py
tests/otree/botex_test/: ButtonSelection.html  Introduction.html  Questions1.html  Questions2.html  Thanks.html  __init__.py
tests/unit/: test_schemas.py
tutorials/: exp_3llms.html  running_an_experiment.html
