[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "botex"
version = "0.0.1"
authors = [
    { name="Joachim Gassen", email="gassen@wiwi.hu-berlin.de" },
]
description = "Using LLMs as Experimental Participants in oTree"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Private :: Do Not Upload",
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research"
]
dependencies = [
    "requests", "selenium", "litellm"
]


[project.urls]
Homepage = "https://github.com/joachim-gassen/BotEx"
Issues = "https://github.com/joachim-gassen/BotEx/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]


[tool.pytest.ini_options]
filterwarnings = ["ignore:::litellm:", "ignore:::pydantic:"]

