[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "botex"
version = "0.1.0"
authors = [
    { name="Fikir Worku Edossa", email="edossafi@wiwi.hu-berlin.de" },
    { name="Joachim Gassen", email="gassen@wiwi.hu-berlin.de" },
]
description = "Using LLMs as Experimental Participants in oTree"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha ,
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
    "requests", "selenium", "litellm"
]

[project.urls]
Homepage = "https://github.com/joachim-gassen/botex"
Issues = "https://github.com/joachim-gassen/botex/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
filterwarnings = ["ignore:::litellm:", "ignore:::pydantic:"]

