[build-system]
requires = [
    "setuptools>=60",
    "setuptools-scm>=8.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "botex"
version = "0.1.0"
authors = [
    { name="Joachim Gassen", email="gassen@wiwi.hu-berlin.de" },
    { name="Fikir Worku Edossa", email="edossafi@wiwi.hu-berlin.de" },
]
maintainers = [
    { name="Fikir Worku Edossa", email="edossafi@wiwi.hu-berlin.de" },
    { name="Joachim Gassen", email="gassen@wiwi.hu-berlin.de" },
] 
description = "Using LLMs as Experimental Participants in oTree"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
    'click',
    'requests', 
    'psutil', 
    'selenium', 
    'litellm>=1.44.28',
    'pydantic-settings',
    'instructor',
    'python-dotenv'
]

[project.urls]
Homepage = "https://github.com/joachim-gassen/botex"
Issues = "https://github.com/joachim-gassen/botex/issues"

[project.scripts]
botex = "botex.cli:run_botex"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ['tests']
filterwarnings = ["ignore:::litellm:", "ignore:::pydantic:"]
log_cli = false
log_cli_level = 'INFO'
log_cli_format = '%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)'
markers = [
    "unit: mark a test as a unit test"
]